--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 #search-banner {
   margin-top: 100px;
-  min-height: 300px;
+  min-height: 400px;
   text-align: center;
   justify-content: center;
   display: table;
+  
 }
 #searchform {
   text-align-last: center;
@@ -103,3 +104,30 @@
     color: #666666;
     display: inline;
 }
+
+
+.formelementsstyle{
+  padding-left: 15px;
+  border-left: 8px solid #fc2c38;
+  margin-right: 10px;
+  border-radius: 4px;
+  box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+  height: 50px;
+}
+
+#listHotelsButton {
+  background-color: #fc2c38;
+  color: white;
+  width: 100%;
+  height: 50px;
+  font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
